Adding a few fixes

--- a/ASPNetIdentityMVC/Properties/launchSettings.json
+++ b/ASPNetIdentityMVC/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -17,14 +17,14 @@
       }
     },
     "ASPNetIdentityMVC": {
-      "commandName": "Project",
-      "dotnetRunMessages": "true",
+      "commandName": "Kestrel",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
-      }
+      },
+      "dotnetRunMessages": "true",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
