--- a/ASPNetIdentityMVC/appsettings.json
+++ b/ASPNetIdentityMVC/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "Sqlite": "Data Source=ASPNetIdentityMVCSQLite.db",
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TestSQLiteMVC-D62FD808-3B70-4315-970A-A3D710DDCCF7;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Sqlite": "Data Source=ASPNetIdentityMVCSQLite.db"
   },
   "Logging": {
     "LogLevel": {
