Fixing a project setting

--- a/ASPNetIdentityMVC/Properties/launchSettings.json
+++ b/ASPNetIdentityMVC/Properties/launchSettings.json
@@ -16,8 +16,8 @@
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
       }
     },
-    "ASPNetIdentityMVC": {
-      "commandName": "Kestrel",
+    "Kestrel": {
+      "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
